--- a/LibraryApi.Models/LibraryApi.Models.csproj
+++ b/LibraryApi.Models/LibraryApi.Models.csproj
@@ -8,4 +8,9 @@
     <Folder Include="Dtos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
+  </ItemGroup>
+
 </Project>
