--- a/LibraryApi/appsettings.json
+++ b/LibraryApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "LibraryConnection": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=KomradsLibrary;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "AllowedHosts": "*"
 }
