--- a/LibraryApi.Data/LibraryApi.Data.csproj
+++ b/LibraryApi.Data/LibraryApi.Data.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Implementations\" />
-    <Folder Include="Interfaces\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
   </ItemGroup>
 
 </Project>
