--- a/LibraryApi.Data/LibraryApi.Data.csproj
+++ b/LibraryApi.Data/LibraryApi.Data.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryApi.Models\LibraryApi.Models.csproj" />
+  </ItemGroup>
+
 </Project>
