perf: added book services

--- a/LibraryApi.Services/LibraryApi.Services.csproj
+++ b/LibraryApi.Services/LibraryApi.Services.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Implementations\" />
-    <Folder Include="Interfaces\" />
+    <ProjectReference Include="..\LibraryApi.Data\LibraryApi.Data.csproj" />
+    <ProjectReference Include="..\LibraryApi.Models\LibraryApi.Models.csproj" />
   </ItemGroup>
 
 </Project>
