perf: added category services

--- a/LibraryApi/LibraryApi.csproj
+++ b/LibraryApi/LibraryApi.csproj
@@ -19,7 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LibraryApi.Data\LibraryApi.Data.csproj" />
     <ProjectReference Include="..\LibraryApi.Models\LibraryApi.Models.csproj" />
+    <ProjectReference Include="..\LibraryApi.Services\LibraryApi.Services.csproj" />
   </ItemGroup>
 
 </Project>
