--- a/LibraryApi.Services/LibraryApi.Services.csproj
+++ b/LibraryApi.Services/LibraryApi.Services.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Implementations\" />
-    <Folder Include="Interfaces\" />
+    <ProjectReference Include="..\LibraryApi.Data\LibraryApi.Data.csproj" />
+    <ProjectReference Include="..\LibraryApi.Models\LibraryApi.Models.csproj" />
   </ItemGroup>
 
 </Project>
