--- a/LibraryApi/LibraryApi.csproj
+++ b/LibraryApi/LibraryApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LibraryApi.Models\LibraryApi.Models.csproj" />
+    <ProjectReference Include="..\LibraryApi.Services\LibraryApi.Services.csproj" />
   </ItemGroup>
 
 </Project>
