--- a/LibraryApi/appsettings.json
+++ b/LibraryApi/appsettings.json
@@ -6,8 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "LibraryConnection": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=KomradsLibrary;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  },
+    "ConnectionStrings": {
+        "LibraryConnection": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=KomradsLibrary;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    },
+    "JwtSettings": {
+        "validIssuer": "CodeMazeAPI",
+        "validAudience": "https://localhost5001"
+    },
   "AllowedHosts": "*"
 }
