JWT token authorization

--- a/LibraryApi/appsettings.json
+++ b/LibraryApi/appsettings.json
@@ -10,8 +10,9 @@
         "LibraryConnection": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=KomradsLibrary;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     },
     "JwtSettings": {
-        "validIssuer": "CodeMazeAPI",
-        "validAudience": "https://localhost5001"
+        "validIssuer": "KomradsAPI",
+        "validAudience": "https://localhost5001",
+        "expires": 5
     },
   "AllowedHosts": "*"
 }
