refactor: category model

--- a/LibraryApi/appsettings.json
+++ b/LibraryApi/appsettings.json
@@ -6,13 +6,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-    "ConnectionStrings": {
-        "LibraryConnection": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=KomradsLibrary;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    },
-    "JwtSettings": {
-        "validIssuer": "KomradsAPI",
-        "validAudience": "https://localhost5001",
-        "expires": 5000
-    },
+  "ConnectionStrings": {
+      "LibraryConnection": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=KomradsLibrary;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "JwtSettings": {
+    "validIssuer": "KomradsAPI",
+    "validAudience": "https://localhost5001",
+    "expires": 5000
+  },
+  "DaySettings": {
+    "dueIn" : 10
+  },
   "AllowedHosts": "*"
 }
