--- a/LibraryApi.Services/LibraryApi.Services.csproj
+++ b/LibraryApi.Services/LibraryApi.Services.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LibraryApi.Data\LibraryApi.Data.csproj" />
     <ProjectReference Include="..\LibraryApi.Models\LibraryApi.Models.csproj" />
   </ItemGroup>
