--- a/LibraryApi.Models/LibraryApi.Models.csproj
+++ b/LibraryApi.Models/LibraryApi.Models.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
